[package]
name = "imago"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = "0.1"
bincode = "1.3"
futures = "0.3"
miniz_oxide = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync"] }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }

[features]
default = []
# async-drop = []
sync-wrappers = []
