[package]
name = "imago"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A library for accessing virtual machine disk images."
repository = "https://gitlab.com/hreitz/imago"
readme = "README.md"

[dependencies]
async-trait = "0.1"
bincode = "1.3"
futures = "0.3"
miniz_oxide = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync"] }
tracing = "0.1"
vm-memory = { version = "0.16", optional = true }

# For build.rs
[build-dependencies]
rustc_version = "0.4.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }

# Document all features for docs.rs
[package.metadata.docs.rs]
all-features = true

[features]
default = []
# async-drop = []
sync-wrappers = []
vm-memory = ["dep:vm-memory"]
