[package]
name = "imago"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A library for accessing virtual machine disk images."
repository = "https://gitlab.com/hreitz/imago"
readme = "README.md"

[dependencies]
async-trait = "0.1"
bincode = "1.3"
miniz_oxide = { version = "0.8", features = ["std"] }
page_size = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
vm-memory = { version = "0.16", optional = true }

# For build.rs
[build-dependencies]
rustc_version = "0.4.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }

# Document all features for docs.rs
[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }

[features]
default = []
# async-drop = []
sync-wrappers = ["tokio/rt"]
vm-memory = ["dep:vm-memory"]

[lints.rust]
# Prohibit code that is forbidden in Rust 2024
unsafe_op_in_unsafe_fn = "deny"

warnings = "deny"

[lints.rustdoc]
private_intra_doc_links = "allow"
broken_intra_doc_links = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
redundant_explicit_links = "deny"
